comparing expert match

--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Analysis annotations\n",
-    "dgc_path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/crowdsourced/20230307_zooniverseanalysislabels.csv\"\n",
+    "dgc_path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/crowdsourced/20230307_zooniverseanalysislabels_nodrops.csv\"\n",
     "with open(dgc_path) as f:\n",
     "  dgc = pd.read_csv(f)\n",
     "seagull_path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/crowdsourced/20230307_zooniverseanalysislabels_seagull.csv\"\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "4  20211201_Atrisco_0459  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,22 +486,40 @@
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "expert12 = [\"BDA_12C_20181127_2_00625\", \"BDA_12C_20181127_2_00638\", \"BDA_12C_20181127_2_00699\", \n",
+    "            \"BDA_18a4_20181106_2_00298\", \"BDA_18A4_20181106_2_00351\", \"BDA_18A4_20181106_3_00580\",\n",
+    "            \"BDA_18A4_20181106_3_00793\", \"BDA_unknown_20181106_2_00437\", \"BDA_unknown_20181106_3_00561\",\n",
+    "            \"BDA_18A4_20181107_3_00917\", \"BDA_unknown_20181106_1_00395\", \"FWS_MaxwellLake13_20171215_2_01152\"]\n",
+    "\n",
+    "#match = ref_zoo[ref_zoo[\"basefile\"].isin(expert12)]\n",
+    "#match.groupby(\"basefile\")[\"bbox\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18"
+       "array(['BDA_18a4_20181106_2_00298', 'FWS_MaxwellLake13_20171215_2_01152'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dgc[\"basefile\"] = [x[:-10] for x in dgc['filename']]\n",
-    "sub = dgc[dgc[\"basefile\"] == \"BDA_18a4_20181106_2_00298\"]\n",
-    "len(sub[\"cluster_id\"].value_counts())\n"
+    "subset = dgc[dgc[\"basefile\"].isin(expert12)]\n",
+    "\n",
+    "subset[\"basefile\"].unique()\n",
+    "#len(subset[\"\"].value_counts())"
    ]
   },
   {
