found the matched labels!

--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "4  20211201_Atrisco_0459  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,66 +420,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "162"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2175\n",
+      "12\n"
+     ]
     }
    ],
    "source": [
     "#CONSENSUS CHECK: COMPARING COUNTS BETWEEN COMMON IMAGES LABELED BY EXPERTS AND THE CROWD\n",
     "\n",
     "#Directory of original filenames for expert labeled images-- currently only found 1, need to match the other 11 tomorrow\n",
-    "imgpath = r\"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/CV4Ecology/Prototyping/Data/Imagery/USFWS/raw/original_filenames\"\n",
+    "imgpath = r\"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/CV4Ecology/Prototyping/Data/Imagery/USFWS/raw\"\n",
     "imglist = os.listdir(imgpath)\n",
     "imglist = [s.strip('.JPG') for s in imglist]\n",
     "\n",
     "#filter the refined labels to only those that match the expert list\n",
     "# expertmatch = ref_zoo[ref_zoo[\"basefile\"] in imglist]\n",
-    "expertmatch = ref_zoo[ref_zoo[\"basefile\"] == \"BDA_18a4_20181106_2_00298\"]\n",
-    "len(expertmatch)\n",
-    "# #Group the expert labels by filename and count the number of boxes per image\n",
-    "# expertmatch.groupby(\"filename\")[\"bbox\"].count().reset_index()\n",
-    "\n",
-    "# #join to cluster check table (count of expert clusters)\n",
-    "# countpath = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/clustercheck.csv\"\n",
-    "# with open(countpath) as f:\n",
-    "#   count = pd.read_csv(f)\n",
-    "# compare = pd.merge(expertmatch,count, left_on=\"filename\", right_on=\"filename\")\n",
-    "\n",
-    "# #difference between absolute counts \n",
-    "# compare[\"diff\"] = compare[\"count\"] - compare[\"cluster_id\"]\n",
-    "# # % percent diff between counts\n",
-    "# compare[\"percent\"] = compare[\"diff\"]/compare[\"cluster_id\"]\n",
-    "\n"
+    "expertmatch = ref_zoo[ref_zoo[\"basefile\"].isin(imglist)]\n",
+    "print(len(expertmatch))\n",
+    "print(len(expertmatch[\"basefile\"].unique()))\n",
+    "# #Group the expert labels by filename and count the number of boxes per image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5503"
+       "basefile\n",
+       "BDA_12C_20181127_1      77\n",
+       "BDA_12C_20181127_2     404\n",
+       "BDA_12C_20181127_3     639\n",
+       "BDA_18A4_20181106_1    171\n",
+       "BDA_18A4_20181106_2    358\n",
+       "BDA_18A4_20181106_3     64\n",
+       "BDA_18A4_20181106_4    122\n",
+       "BDA_18A4_20181107_1     83\n",
+       "BDA_18A4_20181107_2     29\n",
+       "BDA_18A4_20181107_3    100\n",
+       "BDA_18A4_20181107_4     90\n",
+       "mxw_L13_20181215_1      38\n",
+       "Name: bbox, dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(dgc[\"labeler_id\"].unique())"
+    "expertmatch.groupby(\"basefile\")[\"bbox\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Export the match file as its own subset\n",
+    "savepath = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/\"\n",
+    "expertmatch.to_csv(savepath+\"zooniverseconsensus_expertmatch.csv\")"
    ]
   },
   {
