more agreement numbers

--- a/expertconsensus.ipynb
+++ b/expertconsensus.ipynb
@@ -34,10 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Originals \n",
+    "orig_path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/CV4Ecology/Prototyping/Data/Labels/coco/labelbox.csv\"\n",
+    "with open(orig_path) as f:\n",
+    "  originals = pd.read_csv(f)\n",
+    "  originals = originals[originals[\"filename\"] != \"BDA_24C_20181107_1.JPG\"]\n",
+    "  originals['bbox'] = originals['bbox'].apply(ast.literal_eval)\n",
     "#Analysis annotations\n",
     "path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/expert/20230307_expertanalysislabels_spponly.csv\"\n",
     "with open(path) as f:\n",
@@ -47,7 +53,7 @@
     "  #df['bbox_refined'] = df['bbox_refined'].apply(ast.literal_eval)\n",
     "\n",
     "#Refined annotations\n",
-    "refinedpath = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/expert/20230307_expertconsensuslabels_spponly.csv\"\n",
+    "refinedpath = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/expert/expertconsensus_superclass.csv\"\n",
     "with open(refinedpath) as f:\n",
     "  ref = pd.read_csv(f)\n",
     "  ref['bbox'] = ref['bbox'].apply(ast.literal_eval)\n"
@@ -55,7 +61,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19324"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(originals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "labeler\n",
+       "andrew_stetter@fws.gov             1145\n",
+       "barry_wilson@fws.gov               2315\n",
+       "bill_johnson@fws.gov               1983\n",
+       "dan_collins@fws.gov                1395\n",
+       "david.butler@tpwd.texas.gov        2747\n",
+       "jeff_sanchez@fws.gov               1791\n",
+       "jena_moon@fws.gov                  1076\n",
+       "john_vradenburg@fws.gov            1426\n",
+       "josh_vest@fws.gov                   508\n",
+       "jude_smith@fws.gov                 1844\n",
+       "kammie_kruse@fws.gov                960\n",
+       "mbrasher@ducks.org                  485\n",
+       "ronald_deroche@fws.gov              485\n",
+       "stephen.mcdowell@tpwd.texas.gov    1096\n",
+       "steven_sesnie@fws.gov                68\n",
+       "Name: bbox_orig, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby([\"labeler\"])[\"bbox_orig\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "category\n",
+       "American Wigeon                                                         22\n",
+       "Canadian Goose                                                         140\n",
+       "Gadwall                                                                  5\n",
+       "Mallard                                                               1688\n",
+       "Northern Pintail                                                       262\n",
+       "Northern Shoveler                                                        2\n",
+       "Other                                                                   70\n",
+       "Sandhill Crane                                                          52\n",
+       "Teal                                                                     2\n",
+       "['American Wigeon' 'Gadwall' 'Mallard' 'Northern Pintail' 'Other']       1\n",
+       "['American Wigeon' 'Gadwall' 'Mallard' 'Other' 'Teal']                   1\n",
+       "['American Wigeon' 'Gadwall' 'Teal']                                     2\n",
+       "['American Wigeon' 'Mallard' 'Northern Pintail' 'Other' 'Teal']          9\n",
+       "['American Wigeon' 'Mallard' 'Northern Shoveler' 'Other' 'Ruddy']        1\n",
+       "['American Wigeon' 'Mallard' 'Other' 'Ruddy' 'Teal']                     1\n",
+       "['American Wigeon' 'Mallard' 'Other']                                    3\n",
+       "['American Wigeon' 'Mallard' 'Teal']                                     1\n",
+       "['American Wigeon' 'Mallard']                                           15\n",
+       "['American Wigeon' 'Other' 'Teal']                                       1\n",
+       "['American Wigeon' 'Other']                                              7\n",
+       "['Gadwall' 'Mallard' 'Northern Pintail']                                 1\n",
+       "['Gadwall' 'Mallard']                                                    4\n",
+       "['Gadwall' 'Northern Pintail' 'Other']                                   1\n",
+       "['Gadwall' 'Northern Pintail']                                           1\n",
+       "['Gadwall' 'Other']                                                      2\n",
+       "['Mallard' 'Northern Pintail' 'Other']                                   2\n",
+       "['Mallard' 'Northern Pintail']                                          20\n",
+       "['Mallard' 'Northern Shoveler']                                          2\n",
+       "['Mallard' 'Other' 'Teal']                                               2\n",
+       "['Mallard' 'Other']                                                     33\n",
+       "['Mallard' 'Teal']                                                       1\n",
+       "['Northern Pintail' 'Northern Shoveler' 'Other']                         1\n",
+       "['Northern Pintail' 'Northern Shoveler']                                 1\n",
+       "['Northern Pintail' 'Other']                                            15\n",
+       "['Other' 'Teal']                                                         4\n",
+       "Name: bbox, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ref.groupby([\"category\"])[\"bbox\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -65,21 +183,129 @@
        " 'Sandhill Crane',\n",
        " 'Mallard',\n",
        " 'Northern Pintail',\n",
-       " 'American Wigeon',\n",
-       " 'Other',\n",
+       " 'Northern Shoveler',\n",
        " 'Teal',\n",
+       " 'American Wigeon',\n",
        " 'Gadwall',\n",
-       " 'Northern Shoveler']"
+       " 'Ringneck',\n",
+       " 'Ruddy',\n",
+       " 'Readhead',\n",
+       " 'Other',\n",
+       " 'Snow Goose']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spplist = list(ref[\"category\"].unique())\n",
+    "spplist = list(originals[\"category\"].unique())\n",
     "spplist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_dict = {'Canadian Goose': \"Goose\",\n",
+    " 'Sandhill Crane': \"Crane\",\n",
+    " 'Mallard':\"Duck\",\n",
+    " 'Northern Pintail': \"Duck\",\n",
+    " 'Northern Shoveler': \"Duck\",\n",
+    " 'Teal': \"Duck\",\n",
+    " 'American Wigeon': \"Duck\",\n",
+    " 'Gadwall': \"Duck\",\n",
+    " 'Ringneck': \"Duck\",\n",
+    " 'Ruddy': \"Duck\",\n",
+    " 'Readhead': \"Duck\",\n",
+    " 'Other': \"Other\",\n",
+    " 'Snow Goose': \"Goose\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"class_refined\"] = df[\"cat_refined\"].map(class_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "labeler                          class_refined  agree\n",
+       "andrew_stetter@fws.gov           Crane          Yes       43\n",
+       "                                 Duck           Yes      840\n",
+       "                                 Goose          Yes      100\n",
+       "                                 Other          No        57\n",
+       "                                                Yes        1\n",
+       "                                                        ... \n",
+       "stephen.mcdowell@tpwd.texas.gov  Other          Yes        3\n",
+       "                                                No         2\n",
+       "steven_sesnie@fws.gov            Crane          Yes        9\n",
+       "                                 Duck           Yes       14\n",
+       "                                 Goose          Yes       43\n",
+       "Name: agree, Length: 82, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['agree'] = 'No'\n",
+    "df.loc[df['class_orig'] == df[\"class_refined\"], 'agree'] = 'Yes'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agreement = df.groupby([\"labeler\",\"class_refined\"])[\"agree\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "labeler                          class_refined  agree\n",
+       "andrew_stetter@fws.gov           Crane          Yes       43\n",
+       "                                 Duck           Yes      840\n",
+       "                                 Goose          Yes      100\n",
+       "                                 Other          No        57\n",
+       "                                                Yes        1\n",
+       "                                                        ... \n",
+       "stephen.mcdowell@tpwd.texas.gov  Other          Yes        3\n",
+       "                                                No         2\n",
+       "steven_sesnie@fws.gov            Crane          Yes        9\n",
+       "                                 Duck           Yes       14\n",
+       "                                 Goose          Yes       43\n",
+       "Name: agree, Length: 82, dtype: int64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agreement"
    ]
   },
   {
@@ -345,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +611,7 @@
        "Name: agree, dtype: int64"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,34 +625,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "labeler                 cat_refined       agree\n",
-       "andrew_stetter@fws.gov  American Wigeon   No         3\n",
-       "                                          Yes        3\n",
-       "                        Canadian Goose    Yes      100\n",
-       "                        Gadwall           Yes        3\n",
-       "                                          No         2\n",
-       "                                                  ... \n",
-       "steven_sesnie@fws.gov   Canadian Goose    Yes       43\n",
-       "                        Mallard           Yes        8\n",
-       "                                          No         3\n",
-       "                        Northern Pintail  Yes        3\n",
-       "                        Sandhill Crane    Yes        9\n",
-       "Name: agree, Length: 181, dtype: int64"
+       "cat_refined        agree\n",
+       "American Wigeon    Yes         74\n",
+       "                   No          57\n",
+       "Canadian Goose     Yes       1119\n",
+       "                   No          74\n",
+       "Gadwall            No          22\n",
+       "                   Yes         17\n",
+       "Mallard            Yes      10745\n",
+       "                   No        2179\n",
+       "Northern Pintail   Yes       1643\n",
+       "                   No         366\n",
+       "Northern Shoveler  No           7\n",
+       "                   Yes          6\n",
+       "Other              No         263\n",
+       "                   Yes        235\n",
+       "Sandhill Crane     Yes        441\n",
+       "                   No           1\n",
+       "Teal               Yes          7\n",
+       "                   No           6\n",
+       "Name: agree, dtype: int64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby([\"labeler\",\"cat_refined\"])[\"agree\"].value_counts()"
+    "df.groupby([\"cat_refined\"])[\"agree\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19324"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['duck_agree'] = 'No'\n",
+    "df.loc[df['class_orig'] == df[\"class_refined\"], 'duck_agree'] = 'Yes'\n",
+    "df.groupby(\"labeler\")[\"duck_agree\"].value_counts()"
    ]
   },
   {
