--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "4  20211201_Atrisco_0459  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -456,19 +456,29 @@
     {
      "data": {
       "text/plain": [
-       "basefile\n",
-       "BDA_12C_20181127_1      77\n",
-       "BDA_12C_20181127_2     404\n",
-       "BDA_12C_20181127_3     639\n",
-       "BDA_18A4_20181106_1    171\n",
-       "BDA_18A4_20181106_2    358\n",
-       "BDA_18A4_20181106_3     64\n",
-       "BDA_18A4_20181106_4    122\n",
-       "BDA_18A4_20181107_1     83\n",
-       "BDA_18A4_20181107_2     29\n",
-       "BDA_18A4_20181107_3    100\n",
-       "BDA_18A4_20181107_4     90\n",
-       "mxw_L13_20181215_1      38\n",
+       "basefile             category\n",
+       "BDA_12C_20181127_1   Crane        11\n",
+       "                     Duck         31\n",
+       "                     Goose        35\n",
+       "BDA_12C_20181127_2   Crane         6\n",
+       "                     Duck        381\n",
+       "                     Goose        17\n",
+       "BDA_12C_20181127_3   Duck        614\n",
+       "                     Goose        25\n",
+       "BDA_18A4_20181106_1  Duck        171\n",
+       "BDA_18A4_20181106_2  Crane         1\n",
+       "                     Duck        357\n",
+       "BDA_18A4_20181106_3  Duck         64\n",
+       "BDA_18A4_20181106_4  Duck        122\n",
+       "BDA_18A4_20181107_1  Crane        11\n",
+       "                     Duck         72\n",
+       "BDA_18A4_20181107_2  Duck         20\n",
+       "                     Goose         9\n",
+       "BDA_18A4_20181107_3  Duck        100\n",
+       "BDA_18A4_20181107_4  Crane        23\n",
+       "                     Duck         67\n",
+       "mxw_L13_20181215_1   Duck          4\n",
+       "                     Goose        34\n",
        "Name: bbox, dtype: int64"
       ]
      },
@@ -478,7 +488,7 @@
     }
    ],
    "source": [
-    "expertmatch.groupby(\"basefile\")[\"bbox\"].count()"
+    "expertmatch.groupby([\"basefile\",\"category\"])[\"bbox\"].count()"
    ]
   },
   {
