more agreement with consensus

--- a/expertconsensus.ipynb
+++ b/expertconsensus.ipynb
@@ -278,34 +278,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "labeler                          class_refined  agree\n",
-       "andrew_stetter@fws.gov           Crane          Yes       43\n",
-       "                                 Duck           Yes      840\n",
-       "                                 Goose          Yes      100\n",
-       "                                 Other          No        57\n",
-       "                                                Yes        1\n",
-       "                                                        ... \n",
-       "stephen.mcdowell@tpwd.texas.gov  Other          Yes        3\n",
-       "                                                No         2\n",
-       "steven_sesnie@fws.gov            Crane          Yes        9\n",
-       "                                 Duck           Yes       14\n",
-       "                                 Goose          Yes       43\n",
-       "Name: agree, Length: 82, dtype: int64"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "agreement"
+    "savepath = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/expert/\"\n",
+    "#exportanalysis = datetime.now().strftime('%Y%m%d_zooniverseanalysislabels_seagull_nodrops.csv')\n",
+    "agreement.to_csv(savepath+\"agreementsuperclass.csv\")"
    ]
   },
   {
